[gd_scene load_steps=5 format=2]

[ext_resource path="res://Game/Datapacks/UI/PackVarUIs/PackVarUIBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game/Datapacks/UI/PackVarUIs/AutoSelectorVarUI.gd" type="Script" id=2]
[ext_resource path="res://Game/Datapacks/UI/PackVarUIs/SelectorVarUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game/Datapacks/UI/PackVarUIs/AdvancedSelectorVarUI.tscn" type="PackedScene" id=4]

[node name="AutoSelectorVarUI" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="AdvancedSelectorVarUI" parent="." index="0" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 638.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SelectorVarUI" parent="." index="1" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 642.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="onValueChange" from="AdvancedSelectorVarUI" to="." method="_on_AdvancedSelectorVarUI_onValueChange"]
[connection signal="onValueChange" from="SelectorVarUI" to="." method="_on_SelectorVarUI_onValueChange"]
